--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -29,10 +29,52 @@
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
+                <span class="navbar-text">
+                    <a data-toggle="modal" data-target="#loginModal">
+                        <span class="fa fa-sign-in"></span> Login
+                    </a>
+                </span>
             </div>
         </div>
     </nav>
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class=" modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class=" modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class=" form-group col-sm-4">
+                                <label class=" sr-only" for="exampleInputEmail3">Enter Address</label>
+                                <input type="email" class=" form-control form-control-sm mr-1" placeholder="Enter email" id="exampleInputEmail3">
+                            </div>
+                            <div class=" form-group col-sm-4">
+                                <label class=" sr-only" for="exampleInputPassword3">Password</label>
+                                <input type="password" class=" form-control form-control-sm mr-1" placeholder="Password" id="exampleInputPassword3">
+                            </div>
+                            <div class="col-sm-auto">
+                                <div class=" form-check">
+                                    <input class=" form-check-input" type="checkbox">
+                                    <label class="form-check-label"> Remember Me</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class=" form-row">
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class=" btn btn-primary btn-sm ml-1">Sign in</button>
 
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
     <header class = "jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -44,7 +86,7 @@
                     <div class=" col-12 col-sm align-self-center">
                         <img src="./img/logo.png" class="img-fluid order-sm-first">
                         <div class="btn btn-sm btn-warning col-sm-5 ml-sm-5 order-sm-last">
-                            <a class=" nav-link " href="#reserve" style="color:black;">Reserve Table</a>
+                            <a class=" nav-link " href="#reserve" style="color:black;" data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+852 12345678</strong>" data-placement="bottom">Reserve Table</a>
                         </div>
                            
                     </div>
@@ -54,6 +96,55 @@
     </header>
 
     <div class="container">
+        <div class="row row-content">
+            <div class="col">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="img/uthappizza.png" alt="uthappizza">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2 >Uthappizza <span class="badge badge-danger ">HOT</span> <span
+                                        class="badge badge-pill badge-secondary">$4.99</span></h2>
+                                <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola
+                                    olives, ripe vine cherry
+                                    tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/buffet.png" alt="buffet">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Weekend Grand Buffet <span class="badge badge-danger ">NEW</span></h2>
+                                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing
+                                    appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99
+                                    per person </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/alberto.png" alt="alberto">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2 >Alberto Somayya</h2>
+                                <h4>Executive Chef</h4>
+                                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked
+                                    closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion
+                                    experiences. </p>
+                            </div>
+                        </div>
+                    </div>
+                    <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="1" ></li>
+                        <li data-target="#mycarousel" data-slide-to="2"></li>
+                    </ol>
+                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                   </a>
+                </div>
+            </div>
+
+        </div>
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3 order-sm-last">
                 <h3>Our Lipsmacking Culinary Creations</h3>
@@ -206,7 +297,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
+    <script>
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 </body>
 
 </html>
